--- a/prueba-mongo/build.gradle
+++ b/prueba-mongo/build.gradle
@@ -37,9 +37,10 @@ dependencies {
     testAnnotationProcessor "io.micronaut:micronaut-inject-java"
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation "org.junit.jupiter:junit-jupiter-api"
-    testImplementation "junit:junit:4.13"
     testImplementation "io.micronaut.test:micronaut-test-junit5"
     testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.0.1"
+    testCompile "org.testcontainers:testcontainers:1.14.1"
+    testCompile "org.testcontainers:junit-jupiter:1.14.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
 }
 
